# satori_rs

./: Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: message.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: lib.rs  llm.rs  mock.rs  ollama.rs
crates/agent-macros/: Cargo.toml
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: registry.rs  task_graph.rs  tool.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: calculator.rs  search.rs
crates/agent/src/: agent_impl.rs  builder.rs  planner.rs
crates/satori_rs_agent/: Cargo.toml
crates/satori_rs_agent/src/: agent_impl.rs  builder.rs  lib.rs  planner.rs
crates/satori_rs_agent_core/: Cargo.toml
crates/satori_rs_agent_core/src/: actor.rs  context.rs  error.rs  lib.rs
crates/satori_rs_agent_llm/: Cargo.toml
crates/satori_rs_agent_llm/src/: llm.rs  mock.rs  ollama.rs
crates/satori_rs_agent_macros/: Cargo.toml
crates/satori_rs_agent_macros/src/: lib.rs
crates/satori_rs_agent_runtime/: Cargo.toml
crates/satori_rs_agent_runtime/src/: lib.rs  registry.rs  task_graph.rs  tool.rs
crates/satori_rs_agent_tools/: Cargo.toml
crates/satori_rs_agent_tools/src/: calculator.rs  lib.rs  search.rs
examples/simple_agent/: Cargo.toml  main.rs
