[workspace]
resolver = "2"
members = [
    "crates/satori_rs_agent_core",
    "crates/satori_rs_agent_runtime",
    "crates/satori_rs_agent_llm",
    "crates/satori_rs_agent_tools",
    "crates/satori_rs_agent_macros",
    "crates/satori_rs_agent",
    "examples/simple_agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Stepfen Shawn"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true