[package]
name = "agent-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"