[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
tracing.workspace = true
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"