[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-runtime = { path = "../agent-runtime" }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex-lite = "0.1"

[dev-dependencies]
tokio-test = "0.4"