[package]
name = "satori_rs_agent_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"