[package]
name = "simple_agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[example]]
name = "simple_agent"
path = "main.rs"

[dependencies]
satori_rs_agent = { path = "../../crates/satori_rs_agent" }
satori_rs_agent_llm = { path = "../../crates/satori_rs_agent_llm" }
satori_rs_agent_tools = { path = "../../crates/satori_rs_agent_tools" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true